<resources>
    <string name="app_name">Country</string>
    <string name="search_country">Search</string>
    <string name="filter">Filter</string>
    <string name="en">EN</string>
    <string name="languages">Languages</string>
    <string name="reset">Reset</string>
    <string name="show_results">Show Results</string>
    <string name="population">Population:</string>
    <string name="Region">Region</string>
    <string name="capital">Capital</string>
    <string name="motto">Motto</string>
    <string name="official_language">Official Language</string>
    <string name="ethnic_group">Ethnic Group</string>
    <string name="choose_filters">You haven\'t chosen any Filters.</string>
    <string name="retry">RETRY</string>
    <string name="an_error_occurred">Couldn\'t connect, check your Internet connection</string>
    <string name="empty_search_keyword">Enter search text</string>
    <string name="no_result_found">No results Found</string>
    <string name="cancel">Cancel</string>
    <string name="timezone">Time Zone</string>
    <string name="continent">Continent</string>
    <string name="filter_by">Filter By</string>
    <string name="continents_info">Here are countries in continents that contains \'%1s \' - %1d results</string>
    <string name="currency_info">Here are countries that spend currencies that contains \'%1s \' - %1d result(s) </string>
    <string name="language_info">Here are countries that speak languages that contain \'%1s \' - %1d result(s)</string>
    <string name="countries_info">Here are countries that contain \'%1s \' - %1d result(s)</string>
    <string name="capital_info">Here are countries with capital that contains \'%1s \' - %1d result(s)</string>
    <string name="demonymn_info">Here are countries that have demonymn that contains \'%1s \' - %1d result(s)</string>
    <string name="subcontinent_info">Here are countries in subcontinents that contains \'%1s \' -%1d result(s)</string>
    <string name="continents_empty">There is no continent called \'%1s \'</string>
    <string name="language_empty">We couldn\'t find a country that speaks \'%1s \' as an official language</string>
    <string name="currency_empty">We couldn\'t find a country that spends \'%1s \'</string>
    <string name="countries_empty">There is no country called \'%1s \'</string>
    <string name="capital_empty">There is no country with the capital \'%1s \'</string>
    <string name="demonymn_empty">There is no country with the demonymn \'%1s \'</string>
    <string name="subcontinent_empty">There is no subcontinent called \'%1s \'</string>
    <string name="all_countries_info" />
    <string name="all_countries_empty" />
    <string name="country_hint">Enter a country</string>
    <string name="continent_hint">Enter a continent</string>
    <string name="sub_continent_hint">Enter a sub-continent</string>
    <string name="currency_hint">Enter a currency</string>
    <string name="language_hint">Enter a language</string>
    <string name="capital_hint">Enter a capital</string>
    <string name="demonymn_hint">Enter a demonymn</string>


</resources>