<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#1C1917"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Nigeria" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        tools:listitem="@layout/pictures_item"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/population_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/population"
        android:textColor="#1C1917"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler"
        tools:text="Population" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/religion"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:textColor="#1C1917"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ethnic_group_header"
        tools:text="55 444" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/region_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/Region"
        android:textColor="#1C1917"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/population_header" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/government"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:textColor="#1C1917"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/religion"
        tools:text="55 444" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/capital_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/capital"
        android:textColor="#1C1917"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/region_header" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/motto"
        android:textColor="#1C1917"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_zone" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/time_zone"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:textColor="#1C1917"
        android:textSize="16sp"
        app:fontFamily="@font/axiforma_thin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gdp"
        tools:text="55 444" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/official_language_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/official_language"
        android:textColor="#1C1917"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/motto_header" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/area"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:textColor="#1C1917"
        android:textSize="16sp"
        app:fontFamily="@font/axiforma_thin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/independence"
        tools:text="55 444" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ethnic_group_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/ethnic_group"
        android:textColor="#1C1917"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/official_language_header" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gdp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:textColor="#1C1917"
        android:textSize="16sp"
        app:fontFamily="@font/axiforma_thin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency"
        tools:text="55 444" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialing_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/motto"
        android:textColor="#1C1917"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_format" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#1C1917"
        android:textSize="16sp"
        app:fontFamily="@font/axiforma_thin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/area"
        tools:text="55 444" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/motto_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/motto"
        android:textColor="#1C1917"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/capital_header" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/independence"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:textColor="#1C1917"
        android:textSize="16sp"
        app:fontFamily="@font/axiforma_thin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/government"
        tools:text="55 444" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/driving_side"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:textColor="#1C1917"
        android:textSize="16sp"
        app:fontFamily="@font/axiforma_thin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialing_code"
        tools:text="55 444" />


</androidx.constraintlayout.widget.ConstraintLayout>